examples/test/testpolicy12305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12305
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key41: value6
      key38: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value42
          key37: value35
      podSelector:
        matchLabels:
          key30: value27
          key24: value13
